# autoenum

./: README.md  pyproject.toml
